# signal-ark

./: CLAUDE.md  PLAN.md  README.md  pyproject.toml
docs/: UI_AND_DISTRIBUTION.md  v1-backup-format.md  v2-backup-format.md
proto/: V1Backup.proto
signal_ark/: cli.py  decrypt.py  encrypt.py  kdf.py  mapper.py  metadata.py  v1_decrypt.py  v1_parser.py  v1_to_v2.py
signal_ark/proto/: Backup_pb2.py  LocalArchive_pb2.py  V1Backup_pb2.py
signal_ark/tui/: __init__.py  app.py  screens.py  signal_ark.tcss  widgets.py  worker.py
tests/: test_attachments.py  test_kdf.py  test_roundtrip.py  test_tui.py  test_v1_decrypt.py  test_v1_parser.py  test_v1_to_v2.py
