[project]
name = "signal-ark"
version = "0.1.0"
description = "Reconstruct Signal v2 backup archives from Signal Desktop data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
    "cryptography>=46.0.7",
    "protobuf>=7.34.1",
]

[project.scripts]
signal-ark = "signal_ark.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy-protobuf>=5.0.0",
    "pytest>=9.0.3",
]
